[gd_scene load_steps=18 format=3 uid="uid://0r63vvawg2od"]

[ext_resource type="PackedScene" uid="uid://bcnu24c5dl53g" path="res://scenes/player.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://qmy7plaom4kt" path="res://scripts/POISelector.gd" id="1_tefeu"]
[ext_resource type="Script" uid="uid://cq0e810ml81ko" path="res://scenes/player.gd" id="2_sugp2"]
[ext_resource type="Script" uid="uid://4aevr6ci0ggf" path="res://scripts/Spawner.gd" id="3_sugp2"]
[ext_resource type="Script" uid="uid://cd8nc80fs8aan" path="res://scripts/ClickPicker.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://utvs1wehafoj" path="res://scripts/UIHeader.gd" id="4_tbgi4"]
[ext_resource type="Script" uid="uid://n3cc444055vs" path="res://scripts/PromptPanel.gd" id="6_o6xl0"]
[ext_resource type="Script" uid="uid://bjle1b300malj" path="res://scripts/TerrainGen.gd" id="8_tipki"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jyhfs"]
size = Vector3(250, 1, 250)

[sub_resource type="PlaneMesh" id="PlaneMesh_tbgi4"]
size = Vector2(250, 250)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_tipki"]

[sub_resource type="Sky" id="Sky_tipki"]
sky_material = SubResource("ProceduralSkyMaterial_tipki")

[sub_resource type="Environment" id="Environment_85g3d"]
background_mode = 2
sky = SubResource("Sky_tipki")
ambient_light_source = 3
ambient_light_energy = 0.6

[sub_resource type="BoxShape3D" id="BoxShape3D_tipki"]
size = Vector3(260, 20, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_85g3d"]
size = Vector3(2, 20, 260)

[sub_resource type="BoxShape3D" id="BoxShape3D_choun"]
size = Vector3(2, 20, 260)

[sub_resource type="BoxShape3D" id="BoxShape3D_ya4ey"]
size = Vector3(260, 20, 2)

[node name="Main" type="Node3D"]

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_jyhfs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_tbgi4")

[node name="Player" parent="." instance=ExtResource("1_0wfyh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
script = ExtResource("2_sugp2")

[node name="POISelector" type="Node3D" parent="Player"]
script = ExtResource("1_tefeu")
info_label_path = NodePath("../../CanvasLayer")

[node name="Spawner" type="Node3D" parent="."]
script = ExtResource("3_sugp2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_tbgi4")

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 500.0
offset_bottom = 220.0

[node name="HeaderLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 20.0
offset_right = 411.0
offset_bottom = 80.0
text = "text"

[node name="InfoLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 97.0
offset_right = 461.0
offset_bottom = 147.0
rotation = 0.0075631645
text = "Click an object"
autowrap_mode = 3

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(6, 6)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -9.0
offset_right = 11.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07290202, 0.013854318, 0, 1)

[node name="PromptPanel" type="Panel" parent="CanvasLayer"]
offset_right = 2.0
offset_bottom = 2.0
script = ExtResource("6_o6xl0")
terrain_path = NodePath("../../Terrain")
spawner_path = NodePath("../../Spawner")
header_path = NodePath("..")

[node name="PromptLineEdit" type="LineEdit" parent="CanvasLayer/PromptPanel"]
layout_mode = 0
offset_left = 21.0
offset_top = 593.0
offset_right = 419.0
offset_bottom = 624.0

[node name="GenerateButton" type="Button" parent="CanvasLayer/PromptPanel"]
layout_mode = 0
offset_left = 428.0
offset_top = 593.0
offset_right = 508.0
offset_bottom = 624.0
text = "Generate"

[node name="StatusLabel" type="Label" parent="CanvasLayer/PromptPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = 563.0
offset_right = 185.0
offset_bottom = 596.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enter a prompt:"

[node name="ClickPicker" type="Node3D" parent="."]
script = ExtResource("4_jyhfs")

[node name="Terrain" type="Node3D" parent="."]
script = ExtResource("8_tipki")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.8660254, -0.35355338, 0.35355338, 0, 0.70710677, 0.70710677, -0.5, -0.6123724, 0.6123724, 0, 0, 0)
light_energy = 4.0
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_max_distance = 200.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_85g3d")

[node name="Borders" type="Node3D" parent="."]

[node name="WallNorth" type="StaticBody3D" parent="Borders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 125)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Borders/WallNorth"]
shape = SubResource("BoxShape3D_tipki")

[node name="WallEast" type="StaticBody3D" parent="Borders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 125, 10, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Borders/WallEast"]
shape = SubResource("BoxShape3D_85g3d")

[node name="WallWest" type="StaticBody3D" parent="Borders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -125, 10, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Borders/WallWest"]
shape = SubResource("BoxShape3D_choun")

[node name="WallSouth" type="StaticBody3D" parent="Borders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, -125)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Borders/WallSouth"]
shape = SubResource("BoxShape3D_ya4ey")
